--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
   --bg-color-primary: #00CC99;
   --bg-color-secondary: #FAB80D;
   --bg-color-tertiary: #B7F59F;
+  --bg-color-card: #F5E30E;
 
   font-size: 62.5%;
   font-family: "Roboto Mono", monospace;
@@ -108,9 +109,6 @@ main section.intro {
 }
 
 .fauna {
-  /* width: 100%;
-  height: auto; */
-  
   display: grid;
   place-items: center;
   background-color: #e9ffe1;
@@ -213,9 +211,96 @@ main section.intro {
   transform: translate(-50%, -50%);
 }
 
+.flora {
+  background-image: url('assets/fundo-pg3.jpg');
+  background-size: cover;
+  position: relative;
+  border-bottom: 6px solid var(--bg-color-card);
+}
+
+.flora::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(250, 184, 13, 0.9);
+  z-index: 1;
+}
+
+.flora div {
+  z-index: 2;
+}
+
+.flora .top {
+  margin-top: 2rem;
+}
+
+.flora .top h3 {
+  font-size: 4rem;
+}
+
 .swiper {
   width: 100%;
-  height: 200px;
+}
+
+.swiper-wrapper {
+  padding: 2.6rem;
+}
+
+.flora .card-slider {
+  padding: 0 2rem 2rem 2rem;
+}
+
+.flora .card {
+  display: flex;
+  flex-direction: column;
+  max-width: 40rem;
+  text-align: center;
+  background-color: var(--bg-color-card);
+  border-radius: 12px;
+  border: solid black 2px;
+}
+
+.flora .card img {
+  max-width: 40rem;
+  height: 25rem;
+  object-fit: cover;
+  border-radius: 10px 10px 0 0;
+}
+
+.flora .card-middle {
+  padding: 0 10px 20px 10px;
+}
+
+.flora .card-middle h1 {
+  margin: 12px;
+  margin-bottom: 30px;
+  font-size: 2.4rem;
+  position: relative;
+}
+
+.flora .card-middle h1::after {
+  content: '';
+  width: 10rem;
+  height: 2px;
+  background-color: black;
+  position: absolute;
+  bottom: -15px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.swiper-pagination-bullet {
+  background-color: black;
+  width: 26px;
+  border-radius: 25px;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+    color: black;
 }
 
 
