--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ main section.intro {
   padding: 1rem 2rem;
   border-radius: 30px;
   font-weight: 500;
+  white-space: nowrap;
 
   transition: all 0.2s;
 }
@@ -257,6 +258,7 @@ main section.intro {
   display: flex;
   flex-direction: column;
   max-width: 40rem;
+  overflow: auto;
   text-align: center;
   background-color: var(--bg-color-card);
   border-radius: 12px;
@@ -301,6 +303,56 @@ main section.intro {
 .swiper-button-next,
 .swiper-button-prev {
     color: black;
+}
+
+.queimadas {
+  align-items: start;
+  justify-content: space-around;
+  gap: 2rem;
+  padding: 5rem;
+}
+
+.queimadas div {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.queimadas .fotos img {
+  max-width: 50vw;
+  border: solid black 3px;
+}
+
+.queimadas .conteudo {
+  align-items: center;
+  max-width: 40%;
+}
+
+.queimadas .conteudo h1 {
+  font-size: 4rem;
+}
+
+.queimadas .conteudo p {
+  text-align: justify;
+  text-indent: 30px;
+}
+
+@media (max-width: 600px) {
+  .intro div {
+    width: 100%;
+  }
+
+  header nav {
+    margin-top: 30px;
+  }
+
+  .queimadas .fotos img {
+    max-width: 70vw;
+  }
+
+  .queimadas .conteudo {
+    max-width: 100%;
+  }
 }
 
 
