--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ body * {
   flex-wrap: wrap;
 }
 
+.flex-reverse {
+  flex-direction: row-reverse;
+}
+
 .column {
   flex-direction: column;
 }
@@ -38,7 +42,7 @@ body * {
 header {
   padding: 2rem 4rem;
   background-color: var(--bg-color-primary);
-  border-bottom: 6px solid var(--bg-color-secondary)
+  border-bottom: 6px solid var(--bg-color-secondary);
 }
 
 header img {
