--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@
   --bg-color-card: #F5E30E;
 
   font-size: 62.5%;
+}
+
+* {
   font-family: "Roboto Mono", monospace;
 }
 
@@ -341,6 +344,100 @@ main section.intro {
   text-indent: 30px;
 }
 
+footer {
+  background-color: var(--bg-color-primary);
+}
+
+footer header {
+  border-bottom: none;
+  border-top: 6px solid var(--bg-color-secondary);
+}
+
+footer nav .icon img {
+  width: 20px;
+  transform: rotate(-90deg);
+}
+
+footer .cards-profiles {
+  padding: 4rem 10rem;
+  padding-top: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10rem;
+  justify-content: center;
+}
+
+footer .card {
+  width: 30rem;
+}
+
+footer .card .top {
+  width: 30rem;
+  height: 14rem;
+  background-color: var(--bg-color-tertiary);
+  border-radius: 10px 10px 0 0;
+  border: solid black 2px;
+  border-bottom: none;
+}
+
+footer .card .profile {
+  background-color: white;
+  border: solid black 2px;
+  border-top: none;
+  border-radius: 0 0 10px 10px;
+  gap: 0.5rem;
+}
+
+footer .card .profile img.picture {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: solid white 3px;
+  margin-top: -100px;
+}
+
+footer .card .profile p.name {
+  font-size: 2.4rem;
+  font-weight: 500;
+}
+
+footer .card .profile p.function {
+  margin-bottom: 18px;
+}
+
+footer .card .profile .icons a {
+  margin: 0 0.1rem;
+}
+
+footer .card .profile button {
+  background-color: var(--bg-color-tertiary);
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: 30px;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  font-size: 1.4rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: ease 0.2s;
+}
+
+footer .card .profile button:hover {
+  filter: brightness(0.8);
+}
+
+@media (max-width: 799px) and (min-width: 600px) {
+  .queimadas .fotos img {
+    max-width: 80vw;
+  }
+
+  .queimadas .conteudo {
+    max-width: 90%;
+  }
+}
+
+
 @media (max-width: 600px) {
   .intro div {
     width: 100%;
@@ -357,6 +454,10 @@ main section.intro {
   .queimadas .conteudo {
     max-width: 100%;
   }
+
+  .queimadas .conteudo p,
+  .queimadas .conteudo h1 {
+    text-align: center;
+    text-indent: 0;
+  }
 }
-
-
